[gd_scene load_steps=2 format=3 uid="uid://dcbggxqv1e6m3"]

[ext_resource type="Script" path="res://Shop/shop.gd" id="1_wl5t0"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wl5t0")

[node name="TextShieldUpgrades" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 807.0
offset_top = 435.0
offset_right = 948.0
offset_bottom = 474.0
text = "Shield Upgrades"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="TextGrappleUpgrades" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 961.0
offset_top = 435.0
offset_right = 1109.0
offset_bottom = 474.0
text = "Grapple Upgrades"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="TextChassisUpgrades" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 1123.0
offset_top = 435.0
offset_right = 1271.0
offset_bottom = 474.0
text = "Chassis Upgrades"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="TextItems" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 1286.0
offset_top = 435.0
offset_right = 1434.0
offset_bottom = 474.0
text = "Items (1 Use)"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="ShieldUpgrades" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 807.0
offset_top = 485.0
offset_right = 948.0
offset_bottom = 586.0

[node name="Shield" type="Button" parent="ShieldUpgrades"]
layout_mode = 2
text = "Shield (One time)"
alignment = 0

[node name="ShieldRecharge" type="Button" parent="ShieldUpgrades"]
layout_mode = 2
text = "Shield Recharge"
alignment = 0

[node name="ShieldStrength" type="Button" parent="ShieldUpgrades"]
layout_mode = 2
text = "Shield Strength"
alignment = 0

[node name="GrappleUpgrades" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 961.0
offset_top = 485.0
offset_right = 1109.0
offset_bottom = 586.0

[node name="GrappleRange" type="Button" parent="GrappleUpgrades"]
layout_mode = 2
text = "Grapple Range"
alignment = 0

[node name="GrappleLaunch" type="Button" parent="GrappleUpgrades"]
layout_mode = 2
text = "Grapple Launch"
alignment = 0

[node name="GrappleReel" type="Button" parent="GrappleUpgrades"]
layout_mode = 2
text = "Grapple Reel-in"
alignment = 0

[node name="ChassisUpgrades" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1123.0
offset_top = 485.0
offset_right = 1271.0
offset_bottom = 525.0

[node name="MachineSpeed" type="Button" parent="ChassisUpgrades"]
layout_mode = 2
text = "Machine Speed"
alignment = 0

[node name="PickSwingSpeed" type="Button" parent="ChassisUpgrades"]
layout_mode = 2
text = "Pick Swing Speed"
alignment = 0

[node name="BoosterRocket" type="Button" parent="ChassisUpgrades"]
layout_mode = 2
text = "Booster Rocket"
alignment = 0

[node name="Items" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1286.0
offset_top = 485.0
offset_right = 1434.0
offset_bottom = 586.0

[node name="DoubleJump" type="Button" parent="Items"]
layout_mode = 2
text = "Double Jump"
alignment = 0

[node name="Repulsor" type="Button" parent="Items"]
layout_mode = 2
text = "Repulsor"
alignment = 0

[node name="Revive" type="Button" parent="Items"]
layout_mode = 2
text = "Revive"
alignment = 0

[node name="UpgradeDescription" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 808.0
offset_top = 626.0
offset_right = 1438.0
offset_bottom = 885.0
theme_override_font_sizes/font_size = 20
text = "Hover over a button to expand."
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[node name="PurchaseHistory" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 1448.0
offset_top = 435.0
offset_right = 1670.0
offset_bottom = 885.0
theme_override_font_sizes/font_size = 20
text = "Purchase History:
"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[connection signal="mouse_entered" from="ShieldUpgrades/Shield" to="." method="_on_shield_mouse_entered"]
[connection signal="mouse_exited" from="ShieldUpgrades/Shield" to="." method="_on_shield_mouse_exited"]
[connection signal="pressed" from="ShieldUpgrades/Shield" to="." method="_on_shield_pressed"]
[connection signal="mouse_entered" from="ShieldUpgrades/ShieldRecharge" to="." method="_on_shield_recharge_mouse_entered"]
[connection signal="mouse_exited" from="ShieldUpgrades/ShieldRecharge" to="." method="_on_shield_recharge_mouse_exited"]
[connection signal="pressed" from="ShieldUpgrades/ShieldRecharge" to="." method="_on_shield_recharge_pressed"]
[connection signal="mouse_entered" from="ShieldUpgrades/ShieldStrength" to="." method="_on_shield_strength_mouse_entered"]
[connection signal="mouse_exited" from="ShieldUpgrades/ShieldStrength" to="." method="_on_shield_strength_mouse_exited"]
[connection signal="pressed" from="ShieldUpgrades/ShieldStrength" to="." method="_on_shield_strength_pressed"]
[connection signal="mouse_entered" from="GrappleUpgrades/GrappleRange" to="." method="_on_grapple_range_mouse_entered"]
[connection signal="mouse_exited" from="GrappleUpgrades/GrappleRange" to="." method="_on_grapple_range_mouse_exited"]
[connection signal="pressed" from="GrappleUpgrades/GrappleRange" to="." method="_on_grapple_range_pressed"]
[connection signal="mouse_entered" from="GrappleUpgrades/GrappleLaunch" to="." method="_on_grapple_launch_mouse_entered"]
[connection signal="mouse_exited" from="GrappleUpgrades/GrappleLaunch" to="." method="_on_grapple_launch_mouse_exited"]
[connection signal="pressed" from="GrappleUpgrades/GrappleLaunch" to="." method="_on_grapple_launch_pressed"]
[connection signal="mouse_entered" from="GrappleUpgrades/GrappleReel" to="." method="_on_grapple_reel_mouse_entered"]
[connection signal="mouse_exited" from="GrappleUpgrades/GrappleReel" to="." method="_on_grapple_reel_mouse_exited"]
[connection signal="pressed" from="GrappleUpgrades/GrappleReel" to="." method="_on_grapple_reel_pressed"]
[connection signal="mouse_entered" from="ChassisUpgrades/MachineSpeed" to="." method="_on_machine_speed_mouse_entered"]
[connection signal="mouse_exited" from="ChassisUpgrades/MachineSpeed" to="." method="_on_machine_speed_mouse_exited"]
[connection signal="pressed" from="ChassisUpgrades/MachineSpeed" to="." method="_on_machine_speed_pressed"]
[connection signal="mouse_entered" from="ChassisUpgrades/PickSwingSpeed" to="." method="_on_pick_swing_speed_mouse_entered"]
[connection signal="mouse_exited" from="ChassisUpgrades/PickSwingSpeed" to="." method="_on_pick_swing_speed_mouse_exited"]
[connection signal="pressed" from="ChassisUpgrades/PickSwingSpeed" to="." method="_on_pick_swing_speed_pressed"]
[connection signal="mouse_entered" from="ChassisUpgrades/BoosterRocket" to="." method="_on_booster_rocket_mouse_entered"]
[connection signal="mouse_exited" from="ChassisUpgrades/BoosterRocket" to="." method="_on_booster_rocket_mouse_exited"]
[connection signal="pressed" from="ChassisUpgrades/BoosterRocket" to="." method="_on_booster_rocket_pressed"]
[connection signal="mouse_entered" from="Items/DoubleJump" to="." method="_on_double_jump_mouse_entered"]
[connection signal="mouse_exited" from="Items/DoubleJump" to="." method="_on_double_jump_mouse_exited"]
[connection signal="pressed" from="Items/DoubleJump" to="." method="_on_double_jump_pressed"]
[connection signal="mouse_entered" from="Items/Repulsor" to="." method="_on_repulsor_mouse_entered"]
[connection signal="mouse_exited" from="Items/Repulsor" to="." method="_on_repulsor_mouse_exited"]
[connection signal="pressed" from="Items/Repulsor" to="." method="_on_repulsor_pressed"]
[connection signal="mouse_entered" from="Items/Revive" to="." method="_on_revive_mouse_entered"]
[connection signal="mouse_exited" from="Items/Revive" to="." method="_on_revive_mouse_exited"]
[connection signal="pressed" from="Items/Revive" to="." method="_on_revive_pressed"]
